@startuml all_cld
!include plantumlcolor.inc

Debugger o-- VMManager
Debugger o-- PointManager
VMManager <|-- JDIManager
VMManager <|-- ProbeJManager
PointManager o-- Point
Point o-- DebugResult
Point <|-- BreakPoint
Point <|-- ProbePoint
DebugResult o-- ValueInfo
ValueInfo <|-d- ObjectInfo
ObjectInfo <|-- ArrayInfo
ValueInfo -l-o ObjectInfo 
ValueInfo <|-- PrimitiveInfo
JDIManager o-- JDIScript
ProbeJManager o-- ProbeJ

class Debugger {
  void run(int sleepTime)
  Optional<Point> stopAt(...)
  Optional<Point> watch(...)
}
abstract class VMManager {

}
class PointManager {
  Optional<Point> setPoint(...)
  void removePoint(...)
}
abstract class Point {
  requestSetPoint(vm, pm)
  getResults()
  getResult(varName)
}
abstract class ValueInfo {

}
/' 
class VMManagerFactory {

}

class ValueInfoFactory {

} 
class Location {

}
class DebuggerInfo {

}
class Utility{
  
}
'/
@enduml
